added style for select element

--- a/index.html
+++ b/index.html
@@ -27,12 +27,19 @@
           <div class="line-burger"></div>
         </div>
       </div>
-      <ul class="mob-items">
+      <!-- <ul class="mob-items">
+        <li class="mob-item"><a href="#section--1"> CO nas wyróżnia </a></li>
+        <li class="mob-item"><a href="#section--2"> Skład </a></li>
+        <li class="mob-item"><a href="#section--3"> produkty </a></li>
+      </ul> -->
+    </nav>
+    <div class="mob-items">
+      <ul class="mob-item-wrapper">
         <li class="mob-item"><a href="#section--1"> CO nas wyróżnia </a></li>
         <li class="mob-item"><a href="#section--2"> Skład </a></li>
         <li class="mob-item"><a href="#section--3"> produkty </a></li>
       </ul>
-    </nav>
+    </div>
     <!--  -->
     <section class="hero">
       <div class="img-wrapper">
