fixed parallax animation and loading data from api

--- a/index.html
+++ b/index.html
@@ -26,10 +26,11 @@
     <nav id="nav">
       <div class="nav-container">
         <div id="topLogo" class="logo-wrapper">
-          <h1 class="logo-title">
+          <img src="./img/LOGO_menu TOP.svg" alt="logotype" />
+          <!-- <h1 class="logo-title">
             <span class="dark-part">Arthro</span>
             <span class="primary-part">hard</span>
-          </h1>
+          </h1> -->
         </div>
         <ul class="desc-items">
           <li class="nav-item" id="stand-out" data-href="section--1">
@@ -42,11 +43,14 @@
             produkty
           </li>
         </ul>
-        <div class="mob-menu-toggle">
+        <!-- <div class="mob-menu-toggle">
           <div class="line-burger"></div>
-        </div>
+        </div> -->
       </div>
     </nav>
+    <div class="mob-menu-toggle">
+      <div class="line-burger"></div>
+    </div>
     <div class="mob-items">
       <ul class="mob-item-wrapper">
         <li class="mob-item" data-href="section--1">CO nas wyróżnia</li>
@@ -308,23 +312,21 @@
         <!-- col end -->
       </div>
     </section>
-    <div class="dog-container parallax-container">
-      <img
-        src="./img/piesek.png"
-        alt="piesek"
-        class="bottom-dog parallax-dog"
-      />
-      <img
-        src="./img/bg-dog.png"
-        alt="bg-dog"
-        class="bg-dog bg-dog1 parallax-rightSpot"
-      />
-      <img
-        src="./img/bg-dog.png"
-        alt="bg-dog"
-        class="bg-dog bg-dog2 parallax-leftSpot"
-      />
-    </div>
+    <section class="dog-parallax-section">
+      <div class="dog-container parallax-container">
+        <img
+          src="./img/piesek1.png"
+          alt="piesek"
+          class="bottom-dog parallax-dog"
+        />
+        <div class="bg-dog bg-dog1 parallax-rightSpot">
+          <img src="./img/bg-dog.png" alt="bg-dog" />
+        </div>
+        <div class="bg-dog bg-dog2 parallax-leftSpot">
+          <img src="./img/bg-dog.png" alt="bg-dog" />
+        </div>
+      </div>
+    </section>
     <!--  -->
 
     <section class="products" id="section--3" data-id="section--3">
